excluded deformed patients from study

--- a/HTML_Viewer/study_viewer/static/index.html
+++ b/HTML_Viewer/study_viewer/static/index.html
@@ -37,7 +37,9 @@
       <main class="viewer-area" id="viewer-area">
         <div class="viewer-center">
           <div class="viewer-topbar">
-            <div></div>
+            <div class="toolbar-left">
+              <button class="tb-btn" id="reset-view-btn" title="Reset zoom, pan &amp; W/L (Esc)">Reset View</button>
+            </div>
             <div class="nav-btns" id="nav-btns">
               <button class="tb-btn" data-action="prev" title="Previous patient (←)">&#9664; Prev</button>
               <button class="tb-btn" data-action="next" title="Next patient (→)">Next &#9654;</button>
